# gen_ai_core_lib

./: .gitignore  ARCHITECTURE.md  README.md  __init__.py  exceptions.py  pyproject.toml
agents/: __init__.py  agent.py  agent_factory.py  agent_registry.py
config/: llm_config.py  logging_config.py  session_config.py  settings.py
dependencies/: application_container.py  llm_dependencies.py  session_dependencies.py
lifecycle/: __init__.py  lifecycle_manager.py
llm/: llm_manager.py
memory/: __init__.py  memory_config.py  memory_manager.py
observability/: __init__.py  metrics.py  tracing.py
plugins/: __init__.py  plugin_registry.py
session/: session_manager.py  session_storage.py
storage/: __init__.py  in_memory.py  session_storage_adapter.py  storage_backend.py
testing/: __init__.py  fixtures.py
tools/: __init__.py  builtin.py  tool_registry.py
utils/: token_counter.py  token_counting_wrapper.py
validation/: __init__.py  validators.py
