[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gen-ai-core-lib"
version = "0.1.0"
description = "Core LLM, session, memory, and token utilities for GenAI applications and agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "python-dotenv>=1.0.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
token-counting = [
  "tiktoken>=0.7.0",
]
fastapi = [
  "fastapi>=0.111.0",
]
google = [
  "langchain-google-genai>=0.1.0",
]

[project.urls]
Homepage = "https://example.com/gen-ai-core-lib"

[tool.setuptools]
packages = [
    "gen_ai_core_lib",
    "gen_ai_core_lib.agents",
    "gen_ai_core_lib.config",
    "gen_ai_core_lib.dependencies",
    "gen_ai_core_lib.lifecycle",
    "gen_ai_core_lib.llm",
    "gen_ai_core_lib.memory",
    "gen_ai_core_lib.observability",
    "gen_ai_core_lib.plugins",
    "gen_ai_core_lib.session",
    "gen_ai_core_lib.storage",
    "gen_ai_core_lib.testing",
    "gen_ai_core_lib.tools",
    "gen_ai_core_lib.utils",
    "gen_ai_core_lib.validation",
]
package-dir = {"gen_ai_core_lib" = "."}
